--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
       "include": [
         "src"
       ],
-      "include-dev": true
+      "include-dev": true,
+      "skip-shebang": false
     }
   }
 }
